--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,93 +8,95 @@
     android:orientation="vertical"
     >
 
-    <ScrollView
-        android:id="@+id/sc_login"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+
+    <ImageView
+        android:id="@+id/image_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/ed_login_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/email"
+        android:layout_marginTop="10dp"
+        android:inputType="textEmailAddress"
+        android:textColor="@android:color/holo_blue_light"
+        android:textColorHint="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/image_login" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_gravity="bottom"
-            android:layout_margin="20dp">
+    <EditText
+        android:id="@+id/ed_login_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginTop="20dp"
+        android:hint="password"
+        android:inputType="textPassword"
+        android:textColor="@android:color/holo_blue_light"
+        android:textColorHint="@android:color/darker_gray"
 
-            <ImageView
-                android:id="@+id/image_login"
-                android:layout_width="244dp"
-                android:layout_height="132dp"
-                android:src="@drawable/masslog" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />
 
-            <EditText
-                android:id="@+id/ed_login_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/email"
-                android:textColorHint="@android:color/darker_gray"
-                android:layout_marginTop="50dp"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/holo_blue_light"/>
+    <Button
+        android:id="@+id/bt_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/login_btn"
+        android:enabled="false"
+        android:text="LOG IN"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />
 
-            <EditText
-                android:id="@+id/ed_login_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:layout_marginTop="20dp"
-                android:hint="password"
-                android:textColorHint="@android:color/darker_gray"
-                android:textColor="@android:color/holo_blue_light"
+    <Button
+        android:id="@+id/bt_create_new"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_create"
+        android:text="CREATE NEW ACCOUNT"
+        android:layout_marginTop="20dp"
 
-                />
+        app:layout_constraintTop_toBottomOf="@+id/bt_login"
+        tools:layout_editor_absoluteX="-36dp" />
 
-            <Button
-                android:id="@+id/bt_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="LOG IN"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/login_btn"
-                android:enabled="false"
-                />
+    <TextView
+        android:id="@+id/tv_item_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/massege"
+        android:textSize="16sp"
 
-            <Button
-                android:id="@+id/bt_create_new"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CREATE NEW ACCOUNT"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/btn_create"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-                />
-
-            <TextView
-                android:id="@+id/tv_item_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/massege"
-                android:layout_marginTop="10dp"
-                android:textSize="16sp"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/tv_forget_pass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/forget_password"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="@color/newcolor"
-                android:layout_marginTop="30dp"/>
-        </LinearLayout>
-    </ScrollView>
+    <TextView
+        android:id="@+id/tv_forget_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/forget_password"
+        android:textColor="@color/newcolor"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tv_item_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_create_new"
+        app:layout_constraintVertical_bias="0.923" />
 
 
 
