--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -5,28 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".login"
+    android:background="@color/design_default_color_on_secondary"
     android:orientation="vertical"
     >
 
 
     <ImageView
         android:id="@+id/image_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="413dp"
+        android:layout_height="373dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
+
+    <EditText
         android:id="@+id/ed_login_email"
+        style="@style/Widget.Design.TextInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="16dp"
         android:hint="@string/email"
-        android:layout_marginTop="10dp"
         android:inputType="textEmailAddress"
-        android:textColor="@android:color/holo_blue_light"
+        android:textColor="@android:color/white"
         android:textColorHint="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,16 +39,22 @@
 
     <EditText
         android:id="@+id/ed_login_password"
+        style="@style/Widget.Design.TextInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+
+
+        android:autofillHints=""
         android:ems="10"
-        android:layout_marginTop="20dp"
-        android:hint="password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="@android:color/holo_blue_light"
         android:textColorHint="@android:color/darker_gray"
-
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />
 
@@ -55,6 +66,9 @@
         android:enabled="false"
         android:text="LOG IN"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />
@@ -66,6 +80,8 @@
         android:background="@drawable/btn_create"
         android:text="CREATE NEW ACCOUNT"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
 
         app:layout_constraintTop_toBottomOf="@+id/bt_login"
         tools:layout_editor_absoluteX="-36dp" />
@@ -75,6 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="#fff"
         android:text="@string/massege"
         android:textSize="16sp"
 
@@ -88,15 +105,17 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/forget_password"
-        android:textColor="@color/newcolor"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_item_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_create_new"
-        app:layout_constraintVertical_bias="0.923" />
+        app:layout_constraintVertical_bias="0.787" />
+
 
 
 
